# models/user.js
@@ -1,0 +1,33 @@
+module.exports = (mongoose) => {
+  const userSchema = mongoose.Schema({
+    username: {
+      type: String
+    },
+    firstName: {
+      type: String
+    },
+    lastName: {
+      type: String
+    },
+    email: {
+      type: String
+    },
+    password: {
+      type: String
+    },
+    birthDate: {
+      type: String
+    },
+    phone: {
+      type: String
+    },
+    country: {
+      type: String
+    },
+    profileImg: {
+      type: String
+    }
+  });
+
+  return mongoose.model('users', userSchema);
+};
